--- a/src/JOK/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/JOK/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Affichage de l'annonce {{id}}</title>
-</head>
-<body>
-    <h1>Annonce N°= {{id}}</h1>
-    {% for message in app.session.flashbag.get('info') %}
-        <p>{{message}}</p>
-    {% endfor %}
-</body>
-</html>
+{% extends "JOKPlatformBundle::base.html.twig" %}
+
+{% block title %}
+  Lecture d'une annonce - {{ parent() }}
+{% endblock %}
+
+{% block jokplatform_body %}
+
+  <h2>{{ advert.title }}</h2>
+  <i>Par {{ advert.author }}, le {{ advert.date|date('d/m/Y') }}</i>
+
+  <div class="well">
+    {{ advert.content }}
+  </div>
+
+  <p>
+    <a href="{{ path('jok_platform_home') }}" class="btn btn-default">
+      <i class="glyphicon glyphicon-chevron-left"></i>
+      Retour à la liste
+    </a>
+    <a href="{{ path('jok_platform_edit', {'id': advert.id}) }}" class="btn btn-default">
+      <i class="glyphicon glyphicon-edit"></i>
+      Modifier l'annonce
+    </a>
+    <a href="{{ path('jok_platform_delete', {'id': advert.id}) }}" class="btn btn-danger">
+      <i class="glyphicon glyphicon-trash"></i>
+      Supprimer l'annonce
+    </a>
+  </p>
+
+{% endblock %}
